Add jvm arguments to support Java 11.
Fixes ZEN-32964.